# thales

./: .gitignore
trufonomics-models/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
trufonomics-models/docs/: SESSION_2026-04-25.md  backend-asks-2026-04-24.md
trufonomics-models/scripts/: backtest_cpi_committee.py  bridge_band_methods.py  bsts_recreation_culture.py  bvar_fuel_chain_real.py  bvar_logistics_5var.py  bvar_logistics_conditional.py  bvar_phase33_verticals.py  bvar_restaurants_6var.py  clevfed_incremental_value.py  com.thales.dailyforecast.plist  composition_check.py  compressed_bridge_comparison.py  cpi_committee.py  daily_committee.py  daily_forecast_run.py  daily_forecast_stefan.py  demo_bsts_recovery.py  demo_commodity_recovery.py  demo_hierarchical_housing.py  demo_phase_2_1_end_to_end.py  demo_regime_switching.py  demo_sv_recovery.py  demo_vecm_recovery.py  density_eval.py  eval_clevfed_native.py  eval_official_baselines.py  experiment_bsts_slope_drift.py  finish_phase_1_2_1_3.py  forecast_live_tomorrow.py  forecast_next_bea_pce.py  forecast_next_bea_pce_native.py  forecast_next_bea_pce_trufweights.py  forecast_next_bls_core_cpi.py  forecast_next_bls_core_cpi_blsnative.py  forecast_next_bls_core_cpi_trufweights.py  forecast_next_bls_cpi.py  forecast_next_bls_cpi_blsnative.py  forecast_next_bls_cpi_trufweights.py  forecast_tomorrow_fresh.py  forecast_truflation_cpi_bottomup.py  (+45 more)
trufonomics-models/tests/: test_baselines_rolling_conformal.py  test_bridge.py  test_bridge_rolling_conformal.py  test_bridged_cbdf.py  test_bsts_archetype.py  (+26 more)
(+438 files in other folders)
